Wrap relation input correctly by sizing to normal input height

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -30,7 +30,3 @@ p.long-form {
 .content-field {
   min-height: 140px;
 }
-
-.hoverable {
-  margin-bottom: 40px;
-}
